# movie-rust

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repo/: mod.rs  postgres_film_repo.rs
api/lib/tests/: health.rs
api/shuttle/: .gitignore  Cargo.toml
api/shuttle/src/: main.rs
frontend/: Cargo.toml  package-lock.json  tailwind.config.js
frontend/public/: tailwind.css
frontend/src/: main.rs
frontend/src/components/: button.rs  film_card.rs  film_modal.rs  footer.rs  header.rs  mod.rs
frontend/src/models/: button.rs
shared/: Cargo.toml
shared/src/: models.rs
