[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = ["sqlx"]

[dependencies]
uuid = { version = "1.5.0", features = ["serde", "v4", "js"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"]}
sqlx = { version = "0.7.2", default-features = false, features = [ "runtime-tokio-native-tls","macros", "postgres", "uuid", "chrono", "json" ], optional = true }
