[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.7.2", default-features = false, features = [ "runtime-tokio-native-tls","macros", "postgres", "uuid", "chrono", "json" ] }
tracing = "0.1.40"
serde = "1.0.189"
serde_json = "1.0.107"

# utils
async-trait = "0.1.74"
uuid = { version = "1.5.0", features = ["serde", "v4", "js"] }

# shared
shared = { path = "../../shared", features = ["backend"] }



[dev-dependencies]
actix-rt = "2.9.0"