[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.30.0"
shuttle-runtime = "0.30.0"
shuttle-shared-db = { version = "0.30.1", features = ["postgres"] }
sqlx = { version = "0.7.2", default-features = false, features = [ "runtime-tokio-native-tls","macros", "postgres", "uuid", "chrono", "json" ] }
tokio = "1.26.0"
tracing = "0.1.40"
